--- a/apps/attica-dt/src/index.html
+++ b/apps/attica-dt/src/index.html
@@ -19,4 +19,6 @@
   <body>
     <uwmh-root></uwmh-root>
   </body>
+  <script src="https://unpkg.com/three@0.126.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
 </html>
