--- a/apps/attica-dt/src/index.html
+++ b/apps/attica-dt/src/index.html
@@ -15,8 +15,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
-  <body>
+  <body class="mat-typography">
     <uwmh-root></uwmh-root>
   </body>
 </html>
